<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_48px"
            android:title="@string/nav_menu_schedule" />
    </group>

    <group
        android:id="@+id/menu_about"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_48px"
            android:title="@string/nav_menu_about" />
    </group>

    <group
        android:id="@+id/menu_contact"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send_48px"
            android:title="@string/nav_menu_send" />
    </group>

</menu>
